bad/mod_invalid_types_bool_null.example_compiler_output
ERROR
[1mbad/mod_invalid_types_bool_null.lat:3:7: [1;31merror: [0;1mmodulo is defined only for int values, not `boolean` and `null`[m
	true % null;
	     [1;32m^[m
